--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://estebanlouerat.github.io/Html/MySite">My WebSite</a>
+                    <a class="nav-link" href="https://estebanlouerat.github.io/Html/MySite">Epytodo WebSite</a>
                   </li>
                 </ul>
                 <a class="btn btn-primary" href="https://github.com/EstebanLouerat/Html" role="button">Return to Github</a>
